--- a/src/lovelace_cfg/home.yaml
+++ b/src/lovelace_cfg/home.yaml
@@ -504,7 +504,7 @@ views:
               - type: button
                 tap_action:
                   action: toggle
-                entity: switch.lidl_power4
+                entity: switch.lidl_power6
                 name: Arbeitsbereich
                 icon: mdi:lamp
             columns: 3
@@ -563,3 +563,34 @@ views:
           - arm_night
         entity: alarm_control_panel.ha_alarm
         name: Alarm Control
+  - title: Weihnachten
+    path: weihnachten
+    icon: mdi:candelabra-fire
+    badges: []
+    cards:
+      - type: grid
+        cards:
+          - type: grid
+            cards:
+              - type: button
+                tap_action:
+                  action: toggle
+                entity: light.dev50_r2
+                icon: mdi:lamp
+                name: Garten
+              - type: button
+                tap_action:
+                  action: toggle
+                entity: switch.lidl_power4
+                icon: mdi:lamp
+                name: Pyramide
+              - type: button
+                tap_action:
+                  action: toggle
+                entity: switch.tasmota3
+                icon: mdi:lamp
+                name: Haustür
+            columns: 2
+            square: false
+        columns: 1
+        square: false
